--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.injected.testOnly=false
+org.gradle.jvmargs=-Xmx4608m -Dfile.encoding=UTF-8
